--- a/src/app/kontakt-marketersi/contact.css
+++ b/src/app/kontakt-marketersi/contact.css
@@ -1,5 +1,4 @@
 .first_form_container {
-  
   padding: 5rem 0;
 }
 
@@ -42,7 +41,7 @@
   margin: 0 23px 0 auto;
   width: 36rem;
   padding: 2rem 3rem;
-  
+
   border-radius: 0.9rem;
   box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.15), 0px 0px 0px 0px #fff,
     2px 2px 2px 0px #fff inset, -2px -2px 2px 0px #c7c7c7 inset;
@@ -149,7 +148,7 @@ a.form_number_content {
   flex-wrap: wrap;
   gap: 10px;
   justify-content: space-around;
-  
+
   padding: 0 5rem 5rem 5rem;
 }
 
@@ -263,7 +262,6 @@ a.card_btn:hover {
 }
 
 .section_logo {
-  
   padding-bottom: 3rem;
   margin: 0 0 70px;
 }
@@ -271,7 +269,7 @@ a.card_btn:hover {
 /* section four  */
 
 .container_fluid_plus {
-  background-image: linear-gradient(173deg, #e3e3e3 65%, #fbb1b6);
+  background-image: linear-gradient(173deg, #f4f4f4 65%, #fbb1b6);
   padding-bottom: 10rem;
   padding-left: 50px;
   padding-right: 50px;
@@ -528,7 +526,6 @@ div.glow {
   100% {
     transform: scale(1.8);
     opacity: 0.2;
-
   }
 }
 
@@ -543,7 +540,6 @@ div.glow {
     box-shadow: 0px 0px 20px #d21e00;
   }
 } */
-
 
 .plus_icon_container.active span {
   background: red;
@@ -766,7 +762,6 @@ div.glow {
     top: 150px;
     left: 310px;
   }
-
 }
 
 @media screen and (max-width: 1024px) {
@@ -891,7 +886,6 @@ div.glow {
     top: 260px;
     left: 450px;
   }
-
 }
 
 /* -------------------------------media screen---------------------- */
@@ -905,10 +899,10 @@ div.glow {
   }
   .orders_number.desktop {
     display: none;
-}
-.right_box_bottom {
-  margin: 8rem auto 0;
-}
+  }
+  .right_box_bottom {
+    margin: 8rem auto 0;
+  }
   .form_sect {
     width: 100%;
     padding: 20px;
@@ -1033,49 +1027,49 @@ div.glow {
   .icon5 {
     top: 45px;
     left: 94px;
-}
+  }
 
   .icon6 {
     top: 20px;
     left: 146px;
-}
+  }
 
-.icon7 {
-  top: 50px;
-  left: 240px;
-}
+  .icon7 {
+    top: 50px;
+    left: 240px;
+  }
 
-.icon8 {
-  top: 30px;
-  left: 312px;
-}
+  .icon8 {
+    top: 30px;
+    left: 312px;
+  }
 
-.icon9 {
-  top: 115px;
-  left: 88px;
-}
+  .icon9 {
+    top: 115px;
+    left: 88px;
+  }
 
-.icon10 {
-  top: 80px;
-  left: 187px;
-}
-.icon11 {
-  top: 140px;
-  left: 136px;
-}
-.icon12 {
-  top: 142px;
-  left: 172px;
-}
+  .icon10 {
+    top: 80px;
+    left: 187px;
+  }
+  .icon11 {
+    top: 140px;
+    left: 136px;
+  }
+  .icon12 {
+    top: 142px;
+    left: 172px;
+  }
 
-.icon13 {
-  top: 140px;
-  left: 226px;
-}
-.icon14 {
-  top: 187px;
-  left: 212px;
-}
+  .icon13 {
+    top: 140px;
+    left: 226px;
+  }
+  .icon14 {
+    top: 187px;
+    left: 212px;
+  }
 
   .icon15 {
     top: 103px;
@@ -1099,7 +1093,6 @@ div.glow {
 
   .map_play {
     justify-content: center;
-
   }
 
   .map_button .nasiBtn {
@@ -1110,120 +1103,120 @@ div.glow {
     display: block;
     margin: 9rem auto 0;
     width: 90%;
-}
+  }
   .botum {
     display: grid;
     grid-template-columns: 50% 50%;
     gap: 20px;
-}
-.first_form_container{
-  padding: 2rem 0;
-}
-.botum_contents {
-  width: 90%;
-  margin: 0 auto;
-}
+  }
+  .first_form_container {
+    padding: 2rem 0;
+  }
+  .botum_contents {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 @media only screen and (max-width: 380px) {
   .right_box_bottom img {
     width: 20rem;
     margin: -90px 0 0 0px;
-}
-.botum {
-  margin: 1rem 0;
-}
-.botum h3 {
-  font-size: 16px;
-}
-.map_content {
-  padding: 0 20px 50px;
-}
-.map_content h4 {
-  font-size: 20px;
-}
-  .solid_bold{
+  }
+  .botum {
+    margin: 1rem 0;
+  }
+  .botum h3 {
+    font-size: 16px;
+  }
+  .map_content {
+    padding: 0 20px 50px;
+  }
+  .map_content h4 {
+    font-size: 20px;
+  }
+  .solid_bold {
     font-size: 6rem;
   }
   .solid_tital {
     font-size: 60px;
-}
-.icon1 {
-  top: -30px;
-  left: 25px;
-}
+  }
+  .icon1 {
+    top: -30px;
+    left: 25px;
+  }
 
-.icon2 {
-  top: -58px;
-  left: 132px;
-}
+  .icon2 {
+    top: -58px;
+    left: 132px;
+  }
 
-.icon3 {
-  top: -33px;
-  left: 185px;
-}
+  .icon3 {
+    top: -33px;
+    left: 185px;
+  }
 
-.icon4 {
-  top: 55px;
-  left: 51px;
-}
+  .icon4 {
+    top: 55px;
+    left: 51px;
+  }
 
-.icon5 {
-  top: 35px;
-  left: 74px;
-}
+  .icon5 {
+    top: 35px;
+    left: 74px;
+  }
 
-.icon6 {
-  top: -0px;
-  left: 126px;
-}
+  .icon6 {
+    top: -0px;
+    left: 126px;
+  }
 
-.icon7 {
-  top: 30px;
-  left: 200px;
-}
+  .icon7 {
+    top: 30px;
+    left: 200px;
+  }
 
-.icon8 {
-  top: 10px;
-  left: 272px;
-}
+  .icon8 {
+    top: 10px;
+    left: 272px;
+  }
 
-.icon9 {
-  top: 85px;
-  left: 88px;
-}
+  .icon9 {
+    top: 85px;
+    left: 88px;
+  }
 
-.icon10 {
-  top: 60px;
-  left: 160px;
-}
+  .icon10 {
+    top: 60px;
+    left: 160px;
+  }
 
-.icon11 {
-  top: 105px;
-  left: 116px;
-}
+  .icon11 {
+    top: 105px;
+    left: 116px;
+  }
 
-.icon12 {
-  top: 112px;
-  left: 154px;
-}
+  .icon12 {
+    top: 112px;
+    left: 154px;
+  }
 
-.icon13 {
-  top: 143px;
-  left: 170px;
-}
+  .icon13 {
+    top: 143px;
+    left: 170px;
+  }
 
-.icon14 {
-  top: 104px;
-  left: 192px;
-}
+  .icon14 {
+    top: 104px;
+    left: 192px;
+  }
 
-.icon15 {
-  top: 73px;
-  left: 244px;
-}
+  .icon15 {
+    top: 73px;
+    left: 244px;
+  }
 
-.icon16 {
-  top: 150px;
-  left: 240px;
-}
+  .icon16 {
+    top: 150px;
+    left: 240px;
+  }
 }
