--- a/src/components/organisms/footer/footer.module.css
+++ b/src/components/organisms/footer/footer.module.css
@@ -1,113 +1,117 @@
 .footer {
-    background: #141414;
-    padding: 70px 0 50px 40px;
+  background: #141414;
+  padding: 70px 0 50px 40px;
 }
 
 .footerRow {
-    display: grid;
-    grid-template-columns: 45% 55%;
+  display: grid;
+  grid-template-columns: 45% 55%;
 }
 
 .footerRightMenu h3 {
-    font-size: 18px;
-    color: white;
-    margin: 0 0 20px;
+  font-size: 18px;
+  color: white;
+  margin: 0 0 20px;
 }
 
 .footerRightMenu a {
-    display: block;
-    text-decoration: none;
-    color: lightgray;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 0 0 15px;
+  display: block;
+  text-decoration: none;
+  color: lightgray;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0 0 15px;
 }
 
 .footerRightMenu a:hover {
-    translate: 5px;
-    transition-duration: 0.2s;
-    color: #e74a50;
+  translate: 5px;
+  transition-duration: 0.2s;
+  color: #e74a50;
 }
 
 .footerLogo img {
-    width: 550px;
-    margin: 0 0 78px;
+  margin: 0 0 78px;
 }
 
 .footerBrandLogo {
-    width: 90%;
+  width: 90%;
+}
+
+.footerBrandLogo img {
+  width: 100%;
+  height: auto;
 }
 
 .copyright {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin: 20px 0 0;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 20px 0 0;
 }
 
 .copyrightText p,
 .copyrightMenu p {
-    font-size: 14px;
-    color: #5b5b5b;
+  font-size: 14px;
+  color: #5b5b5b;
 }
 
 .copyrightMenu p a {
-    text-decoration: none;
-    color: #5b5b5b;
+  text-decoration: none;
+  color: #5b5b5b;
 }
 
 .copyrightMenu p a:hover {
-    text-decoration: none;
-    color: #e74a50;
+  text-decoration: none;
+  color: #e74a50;
 }
 
 /* -------------------------------media screen---------------------- */
 @media screen and (max-width: 1024px) {
-    .footerRow {
-        display: grid;
-        grid-template-columns: 100%;
-    }
+  .footerRow {
+    display: grid;
+    grid-template-columns: 100%;
+  }
 
-    .footerLogo img {
-        width: 80%;
-        margin: 0 auto 40px;
-        display: block;
-    }
+  .footerLogo img {
+    width: 80%;
+    margin: 0 auto 40px;
+    display: block;
+  }
 
-    .footerBrandLogo {
-        margin: 0 0 60px;
-    }
+  .footerBrandLogo {
+    margin: 0 0 60px;
+  }
 
-    .footerRightMenu {
-        margin: 0 0 40px;
-    }
+  .footerRightMenu {
+    margin: 0 0 40px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .footerRightMenu {
-        margin: 0 0 40px;
-    }
+  .footerRightMenu {
+    margin: 0 0 40px;
+  }
 
-    .copyright {
-        display: none;
-    }
+  .copyright {
+    display: none;
+  }
 
-    .footerCennik {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .CennikBrn{
-        border: 1px solid red !important;
-        padding: 10px 20px;
-        border-radius: 100px;
-        color: red !important;
-    }
-    .mobileRightMenu{
-        text-align: right;
-    }
-    .footer {
-        background: #141414;
-        padding: 70px 20px 50px 20px;
-    }
+  .footerCennik {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .CennikBrn {
+    border: 1px solid red !important;
+    padding: 10px 20px;
+    border-radius: 100px;
+    color: red !important;
+  }
+  .mobileRightMenu {
+    text-align: right;
+  }
+  .footer {
+    background: #141414;
+    padding: 70px 20px 50px 20px;
+  }
 }
