--- a/src/components/organisms/marketing-consulting/stand-out/stand-out.css
+++ b/src/components/organisms/marketing-consulting/stand-out/stand-out.css
@@ -3,6 +3,11 @@
   padding: 100px 0;
 }
 
+.so_image {
+  width: 100%;
+  height: 100%;
+}
+
 .so_flex {
   display: flex;
   justify-content: center;
@@ -55,7 +60,7 @@
   margin: 50px auto;
 }
 .so_img img {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   display: block;
 }
