feat(loader): add loader spinner in home screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,16 +12,14 @@ body {
   box-sizing: border-box;
 }
 
-/* body {
-  background: #e3e3e3;
-} */
-
-.loader_container {
+/* Loader spinner */
+.loader-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
+
 /* 16. OurClients */
 .OurClients {
   margin-bottom: 150px;
