--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -47,7 +47,7 @@
 }
 
 .heroBtn button {
-  border: 3px solid #ffc600;
+  border: 3px solid #00bfff;
   padding: 10px 20px;
   border-radius: 100px;
   font-size: 20px;
@@ -57,7 +57,7 @@
 }
 
 .heroBtn button:hover {
-  background: #ffc600;
+  background: #00bfff;
 }
 
 .heroBtn a {
@@ -67,10 +67,10 @@
   gap: 15px;
 }
 
-.heroBtn a:hover {
+/* .heroBtn a:hover {
   border-radius: 100px;
-  background: #ffc600;
-}
+  background: #00bfff;
+} */
 
 .heroBtn a span {
   font-size: 20px;
@@ -85,7 +85,7 @@
 
 .heroPlay {
   padding: 10px;
-  background: #ffc600;
+  background: #00bfff;
   border-radius: 100%;
   height: 50px;
   width: 50px;
