--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -401,8 +401,8 @@ img.strategyImg {
 }
 
 .Analysis_Card_Content_Button:hover {
-  background-color: #282828;
-  color: #e3e3e3;
+  background-color: #00bfff;
+  color: #fff;
 }
 
 /* Analysis Dropdown */
@@ -882,8 +882,8 @@ img.strategyImg {
 }
 
 .ImageAdvantage_Button:hover {
-  background-color: #282828;
-  color: #e3e3e3;
+  background-color: #00bfff;
+  color: #fff;
   width: fit-content;
 }
 
@@ -1243,15 +1243,15 @@ img.strategyImg {
 
 .accordion__button:before {
   display: inline-block;
-  content: "+";
+  content: '+';
   height: 10px;
   width: 10px;
   margin-right: 12px;
 }
 
-.accordion__button[aria-expanded="true"]::before,
-.accordion__button[aria-selected="true"]::before {
-  content: "−";
+.accordion__button[aria-expanded='true']::before,
+.accordion__button[aria-selected='true']::before {
+  content: '−';
 }
 
 /* * */
