--- a/src/app/kontakt-marketersi/contact.css
+++ b/src/app/kontakt-marketersi/contact.css
@@ -195,8 +195,8 @@ a.form_number_content {
 
 .card .mail_id {
   font-size: 18px;
-  font-family: "Playfair Display", serif;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Poppins', sans-serif;
   color: black;
   margin-bottom: 2rem;
 }
@@ -1099,22 +1099,40 @@ div.glow {
     display: block;
     margin: 0 0 30px;
   }
-  .bottom {
-    display: block;
-    margin: 9rem auto 0;
-    width: 90%;
-  }
-  .botum {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    gap: 20px;
-  }
+
   .first_form_container {
     padding: 2rem 0;
   }
   .botum_contents {
     width: 90%;
     margin: 0 auto;
+  }
+
+  /*  */
+  .icons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .icons img {
+    margin-bottom: 0;
+    width: 100%;
+  }
+
+  .bottom {
+    width: 100%;
+  }
+
+  .botum {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin-inline: auto;
+  }
+
+  .botum div {
+    width: 50%;
   }
 }
 @media only screen and (max-width: 380px) {
