--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap'); */
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
 body {
   background-color: #f4f4f4 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 * {
@@ -18,6 +18,10 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.loader-container:first-child {
+  margin-top: -115px;
 }
 
 /* 16. OurClients */
@@ -350,7 +354,7 @@ body {
 
 /* -------------------------Accordion------------------------ */
 .copywriter-intro-bg-5-label {
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   font-size: 72px;
   font-weight: 900;
   margin-bottom: 25px;
