feat(slider): fix next button click, comment out experts brand image and adjust UI

--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -1543,7 +1543,8 @@ img.strategyImg {
 }
 
 .ArrowButton:hover {
-  transform: translateY(0.3em);
+  /* update */
+  /* transform: translateY(0.3em); */
   box-shadow: none;
 }
 
