--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -218,7 +218,8 @@ body {
   border: 0.1em solid #000000;
 }
 .ArrowButton:hover {
-  transform: translateY(0.3em);
+  /* update */
+  /* transform: translateY(0.3em); */
   box-shadow: none;
 }
 .ArrowButton_Arrow {
