update links on MarkSide card, change event to onClick instead of onMouseEnter in next button for the slider

--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -308,7 +308,7 @@
 }
 
 .ratingCardContent::before {
-  content: "";
+  content: '';
   position: absolute;
   left: -30px;
   top: 0;
@@ -613,7 +613,7 @@
 
 /* ==========================expert=============================== */
 .expert {
-  background-image: linear-gradient(180deg, #fcfcfc 53%, #e3e3e3);
+  /* background-image: linear-gradient(180deg, #fcfcfc 53%, #e3e3e3); */
   padding: 100px 0;
 }
 
@@ -672,6 +672,10 @@ img.opinionBnnaerImg {
 
 .emoFace {
   position: relative;
+}
+
+.expertLogo img {
+  width: 100%;
 }
 
 /* ------------------------------media screen ------------------------------- */
