--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -47,7 +47,7 @@ h6 {
   margin: 20px 0px;
   line-height: 67px;
   font-size: 75px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   letter-spacing: -0.025em;
 }
@@ -82,7 +82,7 @@ img.projects-main-image-logop {
 .top-banner-long-text {
   display: block;
   color: #818181;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   line-height: 45px;
   font-size: 40px;
   font-weight: 300;
@@ -117,10 +117,12 @@ img.projects-main-image-logop {
 
 .download-catalog-button-2 {
   width: 100%;
-  background: #f2c22f;
+  /* background: #f2c22f; */
+  background: #00bbff;
   border: transparent;
   padding: 16px 3px;
-  color: black;
+  /* color: black; */
+  color: #fff;
   font-weight: 500;
   font-size: 22px;
   bottom: 4px;
@@ -192,7 +194,7 @@ img.projects-main-image-logop {
   padding: 0 15px;
   padding-bottom: 35px;
   font-size: 100px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -212,7 +214,7 @@ img.projects-main-image-logop {
 .theme-desc {
   margin-bottom: 40px;
   color: #515151;
-  font-family: "Georgia";
+  font-family: 'Georgia';
   font-size: 26px;
   line-height: 33px;
   letter-spacing: -0.025em;
@@ -274,7 +276,7 @@ img.projects-main-image-logop {
 }
 
 .opinion-box {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   padding: 15px 0px;
   position: relative;
 }
@@ -354,7 +356,7 @@ img.projects-main-image-logop {
 
 .opinion-box-text {
   font-size: 40px;
-  font-family: "Georgia";
+  font-family: 'Georgia';
   color: rgb(81, 81, 81);
   line-height: 1.25;
   text-align: center;
@@ -370,7 +372,7 @@ img.projects-main-image-logop {
   padding: 0 45px;
   padding-bottom: 50px;
   font-size: 135px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -394,7 +396,7 @@ img.projects-main-image-logop {
 .projets-custom-theme-desc {
   margin-bottom: 40px;
   color: #373737;
-  font-family: "Georgia";
+  font-family: 'Georgia';
   font-size: 40px;
   line-height: 45px;
   letter-spacing: -0.025em;
@@ -455,7 +457,7 @@ img.projects-main-image-logop {
   font-size: 179px;
   letter-spacing: -0.025em;
   line-height: 179px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
 }
 
@@ -463,7 +465,7 @@ img.projects-main-image-logop {
   font-size: 60px;
   letter-spacing: -0.025em;
   line-height: 60px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   margin-bottom: 50px;
   font-weight: 900;
 }
@@ -485,7 +487,7 @@ img.projects-main-image-logop {
 }
 
 .copywriter-intro-bg-5-label {
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   font-size: 80px;
   font-weight: 900;
   margin-bottom: 25px;
@@ -495,7 +497,7 @@ img.projects-main-image-logop {
 .projects-theme-title3 {
   padding: 0 15px;
   font-size: 60px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -541,7 +543,7 @@ img.projects-main-image-logop {
 
 .projects-custom-h5 {
   color: #818181;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   font-style: italic;
   line-height: 42px;
   font-size: 40px;
@@ -560,7 +562,7 @@ img.projects-main-image-logop {
   margin-bottom: 45px;
   font-size: 40px;
   letter-spacing: -0.025em;
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   line-height: 38px;
   color: #373737;
 }
@@ -604,7 +606,7 @@ img.projects-main-image-logop {
 .projects-galeria-theme {
   font-size: 194px;
   line-height: 194px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   margin-bottom: 50px;
 }
@@ -630,10 +632,12 @@ img.projects-main-image-logop {
 
 .download-catalog-button {
   width: 415px;
-  background: #f2c22f;
+  /* background: #f2c22f; */
+  background-color: #00bbff;
   border: transparent;
   padding: 16px 3px;
-  color: black;
+  /* color: black; */
+  color: #fff;
   font-weight: 500;
   font-size: 22px;
   bottom: 4px;
@@ -647,7 +651,7 @@ img.projects-main-image-logop {
   padding: 0 15px;
   padding-bottom: 100px;
   font-size: 98px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -665,7 +669,7 @@ img.projects-main-image-logop {
   margin-bottom: 10px;
   font-size: 47px;
   letter-spacing: -0.025em;
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   line-height: 52px;
   margin-bottom: 20px;
   color: #373737;
@@ -675,7 +679,7 @@ img.projects-main-image-logop {
 
 .projects-clients-theme-subtitle {
   text-align: left;
-  font-family: "Arial";
+  font-family: 'Arial';
   font-style: normal;
   padding-left: 15px;
   margin-bottom: 0px;
@@ -690,7 +694,7 @@ img.projects-main-image-logop {
 .theme-subtitle {
   display: block;
   color: #818181;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   font-style: italic;
   line-height: 1.3;
   font-size: 34px;
@@ -704,7 +708,7 @@ img.projects-main-image-logop {
 
 .projects-theme-title-2 {
   color: #252424;
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   font-size: 50px;
   line-height: 1.4;
   font-weight: 900;
@@ -726,19 +730,19 @@ img.projects-main-image-logop {
 }
 
 .signed-quote-image {
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-style: Italic;
   letter-spacing: -0.025em;
 }
 
 .signed-quote {
   margin: 24px 0px;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
 }
 
 .theme-quote {
   font-size: 60px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #000000;
   font-weight: 400;
   font-style: italic;
@@ -752,7 +756,7 @@ img.projects-main-image-logop {
 .signature {
   text-align: center;
   margin-bottom: 70px;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   font-style: Italic;
   font-size: 19px;
   margin-top: -10px;
@@ -800,7 +804,7 @@ img.projects-main-image-logop {
   background: linear-gradient(to right, #d8ac23 0%, #ffce36 100%);
   width: 350px;
   height: 10px;
-  content: "";
+  content: '';
   position: absolute;
   left: calc(50% - 175px);
   bottom: -50px;
@@ -808,7 +812,7 @@ img.projects-main-image-logop {
 
 .projects-clients-theme-subtitle {
   text-align: left;
-  font-family: "Arial";
+  font-family: 'Arial';
   font-style: normal;
   padding-left: 15px;
   margin-bottom: 0px;
@@ -895,7 +899,7 @@ img.projects-main-image-logop {
   color: white;
   text-align: center;
   margin-top: 86px;
-  font-family: "Georgia";
+  font-family: 'Georgia';
 }
 
 .projects-blue-video-desc2 {
@@ -926,7 +930,7 @@ img.projects-main-image-logop {
 
 .copywriter-ending-main-theme {
   font-size: 100px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   line-height: 101px;
   letter-spacing: -0.025em;
@@ -941,7 +945,7 @@ img.projects-main-image-logop {
 .copywriting-ending-text {
   font-size: 28px;
   line-height: 35px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   letter-spacing: 0;
   margin-top: 125px;
 }
@@ -961,7 +965,7 @@ img.projects-main-image-logop {
   margin-top: 60px;
   font-size: 28px;
   line-height: 35px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   letter-spacing: 0;
 }
 
@@ -982,7 +986,7 @@ img.projects-main-image-logop {
 
 .copywriter-ending-3 {
   font-size: 28px;
-  font-family: "Georgia";
+  font-family: 'Georgia';
   line-height: 36px;
   letter-spacing: -0.025em;
   margin-bottom: 60px;
@@ -991,7 +995,7 @@ img.projects-main-image-logop {
 }
 
 .projects-custom-typed-text {
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   min-height: 50px;
   color: white;
   margin-top: 30px;
@@ -1003,7 +1007,7 @@ img.projects-main-image-logop {
 
 .copywriter-ending-1 {
   font-size: 129px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   line-height: 123px;
   letter-spacing: -0.025em;
@@ -1029,7 +1033,7 @@ img.projects-main-image-logop {
   font-size: 30px;
   line-height: 34px;
   letter-spacing: -0.025em;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 400;
   color: #0d0701;
   text-align: left;
@@ -1041,7 +1045,7 @@ img.projects-main-image-logop {
 .contact-form-2020 .contact-inputs,
 .contact-form-2020,
 .form-container {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .contact-inputs {
@@ -1168,7 +1172,7 @@ contact-inputs textarea {
   width: 30px;
   height: 30px;
   background: url(/assets/images/logo-design/check.svg) no-repeat;
-  content: "";
+  content: '';
   background-size: 100%;
 }
 
@@ -1187,11 +1191,13 @@ contact-inputs textarea {
 }
 
 .download-catalog-button-2:hover {
-  background: #d9ad29;
+  /* background: #d9ad29; */
+  background-color: #009ad2;
 }
 
 .download-catalog-button:hover {
-  background: #d9ad29;
+  /* background: #d9ad29; */
+  background-color: #009ad2;
 }
 
 .carousel-control-next-icon,
@@ -1758,7 +1764,7 @@ img.zooImage.position-relative {
     width: 170%;
     left: -120px !important;
   }
-  .modal_logo_img{
+  .modal_logo_img {
     width: 90%;
   }
 }
