--- a/src/components/organisms/logo/logo.css
+++ b/src/components/organisms/logo/logo.css
@@ -1,12 +1,13 @@
-.sampleLogo{
-    padding: 70px 0;
+.sampleLogo {
+  padding: 70px 0;
 }
-.projects-catalog-submit-buttom{
-    margin: 40px 0 0;
+.projects-catalog-submit-buttom {
+  margin: 40px 0 0;
 }
-.receive{
-    padding: 100px 0 70px;
+.receive {
+  padding: 100px 0 70px;
 }
 button.download-catalog-button-2.projects-download-catalog-button.send-offer-button.js--triggerAnimation:hover {
-    background: #d4aa28;
+  /* background: #d4aa28; */
+  background-color: #009ad2;
 }
